--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-hot-loader": "^4.2.0",
     "react-redux": "^5.0.7",
     "react-universal-component": "^2.9.0",
+    "recharts": "^1.8.5",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-api-middleware-fixed": "^2.0.0",
