--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-google-charts": "^3.0.15",
+    "react-graph-vis": "^1.0.5",
     "react-hot-loader": "^4.2.0",
     "react-redux": "^5.0.7",
     "react-universal-component": "^2.9.0",
