--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@material-ui/icons": "^1.0.0",
     "antd": "^3.25.0",
     "babel-merge": "^1.1.1",
+    "babel-plugin-import": "^1.12.2",
     "date-fns": "^1.29.0",
     "prop-types": "^15.6.1",
     "query-string": "^6.1.0",
