--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "antd": "^3.25.0",
     "babel-merge": "^1.1.1",
     "date-fns": "^1.29.0",
+    "lodash": "^4.17.15",
     "prop-types": "^15.6.1",
     "query-string": "^6.1.0",
     "react": "^16.3.2",
